--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -3894,6 +3894,8 @@ input[type="submit"].button {
 .message-body code,
 .message-body pre {
   background: transparent;
+  max-width: 848px;
+  overflow: hidden;
 }
 
 .message-body pre code {
